# Poo-Project-InventarioCafeteria

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Datetime.py  Inventario_cafe.json  Productos.py  README.md  cacao.py  cafe.py  cli.py  data.py  insumos.py  interface.py  lacteos.py  main.py  main2.py  pyproject.toml  requirements.txt  test_main.py  tests.py
.github/workflows/: calificador-ci.yml  ci.yml  release.yml
