
[project]
name = "POO-semana3-actividad"
version = "0.1.0" # Release Please actualizará este número automáticamente
description = "Proyecto de la clase de POO"
requires-python = ">=3.10"

# ==========================================
# 1. CONFIGURACIÓN DE BLACK (El Formateador)
# ==========================================
[tool.black]
# Por defecto Black usa 88 caracteres. 100 les da un poco más de respiro
# para leer el código en pantallas modernas sin que haga saltos de línea extraños.
line-length = 100
target-version = ['py310']
include = '\.pyi?$'


# ==========================================
# 2. CONFIGURACIÓN DE RUFF (El Linter)
# ==========================================
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Seleccionamos las reglas a evaluar:
# "E" (Errores de estilo pycodestyle)
# "F" (Errores lógicos de Pyflakes, ej. variables sin usar)
# "W" (Advertencias)
select = ["E", "F", "W"]

# Ignoramos E501 (Línea muy larga) porque Black ya se encarga de formatearlo.
# Si Ruff y Black pelean por la longitud de la línea, el CI fallará.
ignore = ["E501"]


# ==========================================
# 3. CONFIGURACIÓN DE MYPY (Tipado Estático)
# ==========================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

# MUY IMPORTANTE: Evita que Mypy lance errores si los alumnos usan
# librerías de terceros (como Flask o Pygame) que no tienen Type Hints.
ignore_missing_imports = true

# Para el Bloque 2, mantenemos esto en 'false'. Si lo cambias a 'true',
# el programa fallará si a un alumno se le olvida poner '-> str' o ': int'
# en CUALQUIER método. (Puedes activarlo al final del cuatrimestre como reto).
disallow_untyped_defs = false


# ==========================================
# 4. CONFIGURACIÓN DE PYTEST (Pruebas Unitarias)
# ==========================================
[tool.pytest.ini_options]
minversion = "7.0"
# -ra: Muestra un resumen de los errores al final.
# -q: Mantiene la terminal limpia (quiet) sin texto innecesario.
addopts = "-ra -q"

# Le dice a pytest en qué carpeta buscar los exámenes.
# Obliga a mantener el proyecto ordenado.
testpaths = [
    "tests",
]
# Le dice a Pytest que el código fuente está en la carpeta actual (raíz)
pythonpath = ["."]
